# atlas

./: Cargo.toml  LICENSE  README.md  build-appimage.sh  build-deb.sh
packaging/: atlas.desktop
src/: app.rs  colors.rs  main.rs  scanner.rs  treemap.rs
