[package]
name = "atlas"
version = "0.1.0"
edition = "2021"
description = "Native Linux disk space analyser with interactive treemap visualisation"
license = "MIT"
authors = ["ProfessorCam"]
repository = "https://github.com/ProfessorCam/atlas"
keywords = ["disk", "space", "treemap", "analyser", "filesystem"]
categories = ["visualization", "filesystem"]

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["default_fonts", "persistence"] }
egui = { version = "0.29", features = ["default_fonts"] }
walkdir = "2"
rayon = "1"
humansize = "2"
dirs = "5"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.deb]
maintainer = "ProfessorCam <professorCam@users.noreply.github.com>"
copyright = "2025, ProfessorCam"
extended-description = """\
Atlas is a native Linux disk space analyser that visualises disk usage
through an interactive treemap display. Navigate your filesystem visually,
zoom into directories, and quickly find what is consuming your disk space."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/atlas", "usr/bin/", "755"],
    ["packaging/atlas.desktop", "usr/share/applications/", "644"],
    ["assets/atlas.png", "usr/share/icons/hicolor/256x256/apps/atlas.png", "644"],
    ["assets/atlas.svg", "usr/share/icons/hicolor/scalable/apps/atlas.svg", "644"],
]
